--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,4 +12,4 @@ jobs:
   echo:
     runs-on: ubuntu-latest
     steps:
-      - run: echo 'Hello, GitHub Actions!
+      - run: echo 'Hello, GitHub Actions!'
